syntax = "proto3";
import "pkg/duckduckgo/typespb/types.proto";

package goduckduckgo;
option go_package = "goduckduckgo/pkg/store/storepb";



service Store {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {
	}

}

message CreateRequest {
	string query = 1;
	QueryPayload answer = 2;
}

message CreateResponse {
	int32 status = 1;
	string error = 2;
}

message ReadRequest {
	string query = 1;
}

message ReadResponse {
	int32 status = 1;
	string error = 2;
	QueryPayload answer = 3;
}

message UpdateRequest{
	string query = 1;
	QueryPayload answer = 2;
}

message UpdateResponse{
	int32 status = 1;
	string error = 2;
}

message DeleteRequest{
	string query = 1;
}

message DeleteResponse{
	int32 status = 1;
	string error = 2;
}